# libde265

./: CMakeLists.txt  README.md  ci.sh
libde265/: CMakeLists.txt  decctx.cc
libde265/wasm/: simd-dct.cc  simd-dct.h  simd-motion.cc  simd-motion.h  simd.cc
libde265/x86/: CMakeLists.txt  sse-motion.cc  sse.cc
